# green-guardian

./: .gitignore  LICENSE  README.md
ros2_ws/: frames_2026-01-30_14.27.29.gv  frames_2026-01-31_17.45.54.gv
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/launch/: display.launch.py  view_model.launch.py  view_robot.launch.py
ros2_ws/src/robot_description/rviz/: green_guardian.rviz  model.rviz  robot_config.rviz  view_robot.rviz
ros2_ws/src/robot_description/urdf/: base_chassis.xacro  bins.xacro  chassis.xacro  constants.xacro  depth_camera.xacro  green_guardian.urdf.xacro  gripper.xacro  lidar.xacro  macros.xacro  materials.xacro  robot.urdf.xacro  wheels.xacro
ros2_ws/src/robot_description/urdf/arm/: arm.xacro  arm_placeholder_6dof.xacro  gripper.xacro
ros2_ws/src/robot_description/urdf/base/: base.xacro  bins.xacro  wheels.xacro
ros2_ws/src/robot_description/urdf/bins/: bins.xacro
ros2_ws/src/robot_description/urdf/components/: arm_gripper_placeholder.xacro  bins.xacro  chassis.xacro  wheels.xacro
ros2_ws/src/robot_description/urdf/config/: dimensions.xacro  materials.xacro
ros2_ws/src/robot_description/urdf/ros2_control/: gz_ros2_control.xacro
ros2_ws/src/robot_description/urdf/sensors/: depth_camera.xacro  lidar.xacro  rplidar_a1.xacro
ros2_ws/src/robot_gazebo/: package.xml  setup.py
ros2_ws/src/robot_gazebo/config/: controllers.yaml
ros2_ws/src/robot_navigation/: package.xml  setup.py
web/frontend/: package-lock.json  package.json
web/frontend/src/: App.jsx  index.css
(+20 files in other folders)
