<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro description package for The Green Guardian robot.</description>

  <maintainer email="you@yourdomain.com">Green Guardian Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Optional but common -->
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
